--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,13 +7,17 @@ body {
   padding: 0;
   margin: 0;
   background: linear-gradient(180deg, #fff3cf 0%, #e2f0f8 75.52%);
-  overflow: hidden;
+  height: 100vh;
+  // overflow: hidden;
 
   font-family: "PP Editorial New", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
 .bg-sunset {
   background: linear-gradient(180deg, #fff3cf 0%, #e2f0f8 75.52%);
 }
@@ -125,6 +129,7 @@ a {
   //   background: #5b3b0b;
   // }
 }
+
 .stroked-text {
   color: transparent;
   -webkit-text-stroke: 1px black;
