--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,14 +14,25 @@ body {
   font-family: "PP Editorial New", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif;
+  @media only screen and (min-width: 600px) {
+    background: linear-gradient(270deg, #fff3cf 0%, #e2f0f8 75.52%);
+  }
 }
 
 body {
   overflow: hidden;
 }
+.slick-list,
+.slick-track {
+  touch-action: pan-y;
+}
+
 .bg-sunset {
   background: linear-gradient(180deg, #fff3cf 0%, #e2f0f8 75.52%);
   background-repeat: none;
+  @media only screen and (min-width: 600px) {
+    background: linear-gradient(270deg, #fff3cf 0%, #e2f0f8 75.52%);
+  }
 }
 
 .sunset {
@@ -37,6 +48,16 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  // &:hover {
+  //   cursor: pointer;
+  // }
+}
+.bay {
+  path {
+    &hover {
+      cursor: pointer;
+    }
+  }
 }
 
 * {
@@ -74,11 +95,11 @@ a {
 
 .bg-cheddar {
   background: linear-gradient(0deg, #f5db95, #f5db95), rgba(255, 255, 255, 0.85);
-  opacity: 0.9;
+  opacity: 0.5;
 }
 
 .selector {
-  top: calc(50% + 40px);
+  top: calc(50% - 54px);
 }
 
 .bay-illustration {
@@ -95,14 +116,12 @@ a {
 }
 .zoom-container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 27px;
-  height: 222px;
-  right: 12px;
-  top: calc(50% - 100px);
-  background: #ebe9e0;
+  transform: rotate(270deg);
+  right: -80px;
+  top: calc(50%);
+  background: #fff3cf;
   border-radius: 30px;
   padding: 6px 5px;
   // :first-child {
@@ -111,42 +130,48 @@ a {
   // :nth-child(2) {
   //   margin-bottom: 10px;
   // }
+  @media only screen and (min-width: 600px) {
+    transform: rotate(0deg);
+    top: 80px;
+    right: calc(50% - 100px);
+  }
 
   .map-zoom {
     -webkit-appearance: none;
-    width: 1px;
-    height: 200px;
-    border-radius: 5px;
-    background: #ccc;
+    width: 200px;
+    height: 1px;
     outline: none;
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
+    padding: 0 4px;
     // outline: none;
+    &::-webkit-slider-runnable-track {
+      background-color: #5b3b0b;
+      color: #5b3b0b;
+      height: 1px;
+      user-select: none;
+    }
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      background-color: #fff3cf;
+      border: 1px solid #5b3b0b;
+      cursor: pointer;
+      // color: #5b3b0b;
+      // border: 1px solid #5b3b0b;
+      height: 13px;
+      width: 13px;
+      margin: -6px 0;
+      border-radius: 14px;
+    }
+    &::-ms-thumb {
+      margin: 0; /* Reset margin in Edge since it supports -webkit-slider-thumb as well */
+    }
+    & :focus {
+      outline: none;
+    }
+    @media only screen and (min-width: 600px) {
+      padding: 0 8px;
+    }
   }
-
-  // input[type="range"]:focus {
-  //   outline: none;
-  // }
-  // input[type="range"]::-webkit-slider-runnable-track {
-  //   width: 1px;
-  //   height: 100%;
-  //   cursor: pointer;
-  //   background: #5b3b0b;
-  //   border-radius: 0px;
-  //   border: 0px solid #000000;
-  // }
-  // input[type="range"]::-webkit-slider-thumb {
-  //   border: 1px solid #5b3b0b;
-  //   height: 13px;
-  //   width: 13px;
-  //   border-radius: 14px;
-  //   background: #ebe9e0;
-  //   cursor: pointer;
-  //   -webkit-appearance: none;
-  // }
-  // input[type="range"]:focus::-webkit-slider-runnable-track {
-  //   background: #5b3b0b;
-  // }
 }
 
 .stroked-text {
@@ -178,4 +203,13 @@ a {
     ),
     rgba(255, 255, 255, 0.85);
   box-shadow: 0px 4px 30px #ffe79c;
+}
+.bg-branch {
+  background: url("/images/HomeBackground.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.drop-shadow-bay {
+  filter: drop-shadow(2px 4px 20px rgba(255, 216, 80, 0.3));
 }
