--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -98,10 +98,6 @@ a {
   opacity: 0.5;
 }
 
-.selector {
-  top: calc(50% - 54px);
-}
-
 .bay-illustration {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -212,4 +208,11 @@ a {
 }
 .drop-shadow-bay {
   filter: drop-shadow(2px 4px 20px rgba(255, 216, 80, 0.3));
+}
+
+.swiper-slide {
+  height: 108px !important;
+  @media only screen and (min-width: 600px) {
+    height: 100% !important;
+  }
 }
