connecting all bays

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -48,9 +48,9 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  // &:hover {
-  //   cursor: pointer;
-  // }
+  &:hover {
+    cursor: pointer;
+  }
 }
 .bay {
   path {
@@ -215,6 +215,22 @@ a {
   width: 100%;
   @media only screen and (min-width: 600px) {
     height: 100% !important;
-    width: 745px !important;
+    width: 800px !important;
+  }
+  @media only screen and (min-width: 1920px) {
+    width: 1024px !important;
+  }
+}
+
+.bay {
+  top: calc(-50% + 124px);
+  @media only screen and (min-width: 600px) {
+    top: calc(-50% + 240px);
+  }
+  &:hover {
+    cursor: grab;
+  }
+  &:active {
+    cursor: grabbing;
   }
 }
