about page, hover features

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,9 +33,10 @@ body {
   }
 }
 
-body {
-  overflow: hidden;
-}
+// body {
+//   overflow: hidden;
+// }
+
 .slick-list,
 .slick-track {
   touch-action: pan-y;
@@ -161,7 +162,7 @@ a {
     width: 200px;
     height: 1px;
     outline: none;
-    padding: 0 4px;
+    margin: 0 4px;
     // outline: none;
     &::-webkit-slider-runnable-track {
       background-color: #684c21;
@@ -189,7 +190,7 @@ a {
       outline: none;
     }
     @media only screen and (min-width: 600px) {
-      padding: 0 8px;
+      margin: 0 8px;
     }
   }
 }
@@ -251,9 +252,14 @@ a {
 }
 
 .bay {
-  top: calc(-50% + 124px);
+  top: -50%;
   @media only screen and (min-width: 600px) {
-    top: calc(-50% + 240px);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
   }
   &:hover {
     cursor: grab;
@@ -261,4 +267,20 @@ a {
   &:active {
     cursor: grabbing;
   }
+}
+
+.past-gradient {
+  background: linear-gradient(
+    180deg,
+    rgba(226, 240, 248, 0.69) 63.33%,
+    rgba(226, 240, 248, 0) 99.3%
+  );
+}
+
+.future-gradient {
+  background: linear-gradient(
+    183.29deg,
+    #fff3cf 49.99%,
+    rgba(250, 245, 233, 0.21) 108.08%
+  );
 }
