--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   background: linear-gradient(
       180deg,
       rgba(35, 99, 193, 0.6) 30.01%,
@@ -15,8 +16,7 @@ body {
     ),
     rgba(255, 255, 255, 0.85);
   background-repeat: none;
-  height: 100vh;
-  // overflow: hidden;
+  overflow: hidden;
 
   font-family: "PP Editorial New", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
@@ -33,6 +33,10 @@ body {
   }
 }
 
+#__next {
+  height: 100%;
+}
+
 // body {
 //   overflow: hidden;
 // }
@@ -42,6 +46,14 @@ body {
   touch-action: pan-y;
 }
 
+.layer-svgs {
+  svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+
 .bg-sunset {
   background: linear-gradient(270.22deg, #fffaea 44.79%, #bde7ff 123.77%);
   background-repeat: none;
@@ -49,7 +61,15 @@ body {
     background: linear-gradient(270.22deg, #fffaea 44.79%, #bde7ff 123.77%);
   }
 }
-.bg-sunset-blue {
+.bg-main-gradient {
+  background: linear-gradient(
+      180deg,
+      rgba(35, 99, 193, 0.6) 33.42%,
+      rgba(193, 186, 154, 0.6) 59.24%,
+      rgba(226, 240, 248, 0.414) 76.79%
+    ),
+    rgba(255, 255, 255, 0.85);
+  background-repeat: none;
 }
 
 .sunset {
@@ -154,20 +174,23 @@ a {
   @media only screen and (min-width: 600px) {
     transform: rotate(0deg);
     top: 80px;
-    right: calc(50% - 100px);
+    right: calc(50% - 124px);
+    padding: 6px;
   }
 
   .map-zoom {
     -webkit-appearance: none;
     width: 200px;
-    height: 1px;
+    height: 1.5px;
     outline: none;
     margin: 0 4px;
+    // padding: 4px;
     // outline: none;
     &::-webkit-slider-runnable-track {
       background-color: #684c21;
       color: #684c21;
-      height: 1px;
+      height: 1.5px;
+
       user-select: none;
     }
     &::-webkit-slider-thumb {
@@ -200,14 +223,14 @@ a {
   -webkit-text-stroke: 1px black;
 }
 .stroked-saddle {
-  color: transparent;
+  // color: transparent;
   -webkit-text-stroke: 1px #684c21;
 }
 .period-gradient {
   background: linear-gradient(
-    183.29deg,
-    #fff3cf 50%,
-    rgba(250, 245, 233, 0.21) 108.08%
+    180deg,
+    #999fa5 0%,
+    rgba(250, 245, 233, 0.21) 92.71%
   );
   background-repeat: none;
 }
@@ -252,15 +275,14 @@ a {
 }
 
 .bay {
-  top: -50%;
-  @media only screen and (min-width: 600px) {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-  }
+  // @media only screen and (min-width: 600px) {
+  //   width: 100%;
+  //   height: 100%;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   top: 0;
+  // }
   &:hover {
     cursor: grab;
   }
@@ -283,4 +305,8 @@ a {
     #fff3cf 49.99%,
     rgba(250, 245, 233, 0.21) 108.08%
   );
+}
+
+.text-shadow {
+  text-shadow: 0px 0px 10px #fed206;
 }
