optimizations and fixes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,7 +16,7 @@ body {
     ),
     rgba(255, 255, 255, 0.85);
   background-repeat: none;
-  overflow: hidden;
+  // overflow: hidden;
 
   font-family: "PP Editorial New", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
