--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,25 +1,34 @@
 @font-face {
-  font-family: 'PP Editorial New';
-  src: url('/fonts/PPEditorialNew-Ultralight.woff2') format('woff2'),
-      url('/fonts/PPEditorialNew-Ultralight.woff') format('woff');
+  font-family: "PP Editorial New";
+  src: url("/fonts/PPEditorialNew-Ultralight.woff2") format("woff2"),
+    url("/fonts/PPEditorialNew-Ultralight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'PP Editorial New';
-  src: url('/fonts/PPEditorialNew-UltralightItalic.woff2') format('woff2'),
-      url('/fonts/PPEditorialNew-UltralightItalic.woff') format('woff');
+  font-family: "PP Editorial New";
+  src: url("/fonts/PPEditorialNew-UltralightItalic.woff2") format("woff2"),
+    url("/fonts/PPEditorialNew-UltralightItalic.woff") format("woff");
   font-weight: 200;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'PP Neue Montreal TT Book';
-  src: url('/fonts/PPNeueMontrealTT-Book.woff2') format('woff2'),
-      url('/fonts/PPNeueMontrealTT-Book.woff') format('woff');
+  font-family: "PP Neue Montreal";
+  src: url("/fonts/PPNeueMontreal-Medium.woff2") format("woff2"),
+    url("/fonts/PPNeueMontreal-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "PP Neue Montreal TT Book";
+  src: url("/fonts/PPNeueMontrealTT-Book.woff2") format("woff2"),
+    url("/fonts/PPNeueMontrealTT-Book.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
