Revert "cleanup and disc links available"
This reverts commit dec7ce51135a6372cd1ab03e61de5f4f0e505c15.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -54,6 +54,13 @@ body {
   }
 }
 
+.bg-sunset {
+  background: linear-gradient(270.22deg, #fffaea 44.79%, #bde7ff 123.77%);
+  background-repeat: none;
+  @media only screen and (min-width: 600px) {
+    background: linear-gradient(270.22deg, #fffaea 44.79%, #bde7ff 123.77%);
+  }
+}
 .bg-main-gradient {
   background: linear-gradient(
       180deg,
